# chilliez

./: .env.mainnet  .env.paper-trading  .gitignore  .roomodes  ARBITRAGE_IMPROVEMENT_MATRIX.md  ARBITRAGE_IMPROVEMENT_MATRIX.txt  ARBITRAGE_INTEGRATION_COMPLETE.md  BACKUP_STRATEGY_SUMMARY.md  BOT_BACKUP_README.md  CLEANUP_SUCCESS_REPORT.md  Cargo copy.txt  Cargo.toml  Cargo.toml.backup  Cargo_new.toml  MISSION_ACCOMPLISHED.md  PAPER_TRADING_SUMMARY.txt  PROJECT_CLEANUP_LOG.md  TODO.md  app.py  arbitrage_bot_config.json  banned_pairs_log.csv  bot_logic.rs  check_logs.sh  cleanup_todo.md  cleanup_webhooks.rs  dashboard.html  folder-structure.md  live_paper_trading.js  master_refactorin_plan.md  metrics-deps.txt  package-lock.json  package.json  paper-trading-collector.json  project_map.md  prometheus.yml  sonar-project.properties  test_banned_pairs.csv  test_env_loading.rs  test_output.txt  test_output5.txt  (+7 more)
.github/chatmodes/: docs_mode.chatmode.md  feature_mode.chatmode.md  refactor_mode.chatmode.md  rust_wizard_mode.chatmode.md
.github/instructions/: Solana_RUST_arb_bot.instructions.md
.github/prompts/: Clippy Cleanup and Todo List Management.prompt.md  refactorin_major.prompt.md
.github/workflows/: build.yaml  build.yaml.backup  ci.yml
Documentation (do not delete)/: PROJECT_CLEANUP_LOG.md  master_refactorin_plan.md  refactoring_proj.md
Services Documentation (do not delete)/: Building_plan.txt  Projec_Architecture_Overview.md  folder-structure.md
chilliez.git/: config  packed-refs
config/: dex_programs.json  known_pools.json  orca_whirlpool_pools.json  paper-trading.toml  quicknode_streams.toml
demo_paper_logs/: paper_analytics_20250616_202052.json  paper_analytics_20250618_145547.json  paper_trades_20250616_202052.jsonl
docs/: ADVANCED_4DEX_IMPLEMENTATION_PLAN.md  ADVANCED_DEX_MATH_INTEGRATION.md  ADVANCED_DEX_MATH_INTEGRATION.txt  ADVANCED_ROUTING_DEMO_SUCCESS.md  Arbitrage_bot_summary.md  CODE_CLEANUP_SUMMARY.md  COMPILATION_SUCCESS_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_PERFORMANCE_DEMO_FIXES.md  CURRENT_STATUS.md  DEMO_TRANSACTION_FUNDING_GUIDE.md  DEX_INTEGRATION_ANALYSIS.md  DEX_INTEGRATION_FIXES.txt  DEX_todo.md  ENGINEERING_GUIDE.txt  EVENT_DRIVEN_BALANCE_MONITORING_COMPLETE.md  FUNCTION_REMOVAL_CHECKLIST.md  GCLoud_implementation.txt  HELIUS_SDK_INTEGRATION_PLAN.md  HELIUS_SDK_PHASE2_SUMMARY.md  IMMEDIATE_ACTION_PLAN.md  JITO_BUNDLE_INTEGRATION.md  JUPITER_CACHE_INTEGRATION_COMPLETE.md  JUPITER_CACHING_EXPLAINED.md  JUPITER_FALLBACK_readme.txt  JUPITER_IMPLEMENTATION_SUMMARY.md  JUPITER_PHASE3_PLAN.md  Jupiter_price_aggr_guide.txt  LONG_TERM_PAPER_TRADING_VALIDATION_FIXES.md  MASTER_BLUEPRINT.md  MASTER_BLUEPRINT.txt  MATH_PRECISION_UPGRADE.txt  METEORA_INTEGRATION_COMPLETE.md  METRICS_LOGGING.md  METRICS_LOGGING.txt  MICROSECOND_TRADING_GUIDE.md  MISSION_ACCOMPLISHED.md  NEXT_STEPS.txt  NEXT_STEPS_UPDATED.txt  OPERATING_GUIDELINES.md  (+68 more)
examples/: advanced_arbitrage_demo.rs  advanced_routing_demo.rs  api_management_demo.rs  balance_monitor_upgrade_demo.rs  complete_integration_test.rs  complete_static_webhook_demo.rs  comprehensive_performance_demo.rs  enhanced_long_term_paper_trading_validation.rs  event_driven_balance_demo.rs  flamegraph_profiling_demo.rs  helius_sdk_integration_test.rs  helius_sdk_pool_monitoring_demo.rs  helius_sdk_simple_test.rs  integrated_pool_service_test.rs  jupiter_cache_demo.rs  jupiter_route_optimization_demo.rs  long_term_paper_trading_validation.rs  mainnet_paper_trading_demo.rs  microsecond_trading_example.cpp  paper_trading_demo.rs  performance_optimization_demo.rs  performance_validation_demo.rs  pool_discovery_test.rs  quicknode_stream_demo.rs  real_environment_paper_trading.rs  safety_check_example.rs  setup_paper_funds.rs  simple_advanced_routing_demo.rs  simple_routing_demo.rs  sprint4_complete_demo.rs  static_pools_to_webhook_integration.rs  test_pool_discovery.rs  wallet_jito_integration_demo.rs  webhook_deployment_test.rs
fconfig/: dex_programs.json  paper-trading.toml  quicknode_streams.toml
latest_build_arb_bot/: BLUEPRINT_READ.txt  Cargo.toml  README.md  ROADMAP.md  TODO.md  banned_pairs_log.csv  check_mps.py  move-to-solana-arb-bot-root.sh
paper_trading_logs/: arbitrage_session_2025-06-17T01-59-05.json  arbitrage_session_2025-06-17T01-59-07.json  arbitrage_session_2025-06-17T02-00-28.json  arbitrage_session_2025-06-17T02-00-52.json  enhanced_arbitrage_opportunities.json  enhanced_paper_trading_2025-06-17T21-06-31-542Z.jsonl  enhanced_paper_trading_2025-06-17T21-26-03-763Z.jsonl  enhanced_paper_trading_2025-06-17T21-29-36-640Z.jsonl  enhanced_paper_trading_2025-06-17T21-32-38-557Z.jsonl  multihop_arbitrage_opportunities.json  profitability_analysis_2025-06-17T02-43-25.json  status_Lifinity.json  status_Raydium.json
paper_trading_reports/: paper_trading_data_20250616_213621.csv  paper_trading_data_20250616_213643.csv  paper_trading_data_20250617_142603.csv  paper_trading_summary_20250616_213621.md  paper_trading_summary_20250616_213643.md  paper_trading_summary_20250617_142603.md
performance_reports/: performance_session_1750158030116.json
scripts/: CLEANUP_SUMMARY.md  check_large_files.sh  complete_paper_trading_setup.sh  monitor_paper_trading.sh  preview_cleanup.sh  run_dashboard_bot.js  setup_paper_trading.sh  setup_quicknode_arbitrage.sh  setup_quicknode_streams.sh  start_paper_trading_fixed.js  test_enhanced_arbitrage.js  test_enhanced_rate.js  test_multihop_arbitrage.js  test_paper_trading.js  test_profit_maximizer_execution.js  test_profitability_analysis.js
src/: api.rs  arbitrage_bot_config.json  arbitrage_monitor.rs  banned_pairs_log.csv  cache.rs  config.rs  dead_code_suppression.rs  dex_todo.md  execution.rs  ffi.rs  helius_client.rs  jito_bundle.rs  lib.rs  main.rs  utils.rs
streams/: monitor_dex.js  monitor_pools.js  test_websocket.js
tests/: arbitrage.test.ts  engine_integration.rs  jito_bundle_integration.rs  jupiter_fallback.rs  jupiter_test.rs  lifinity_integration.rs  meteora_integration.rs  orca_clmm_integration.rs  phoenix_integration.rs  raydium_integration.rs
(+314 files in other folders)
