[package]
name = "solana-arb-bot"
version = "0.1.0"
edition = "2021"

# The print-config feature seems to be for a utility function in utils.rs that was removed.
# If no other code uses this feature flag, it can also be removed.
[features]
# print-config = [] # Candidate for removal if the associated function is gone.

[dependencies]
# === Solana Core ===
solana-client = "1.18.3"
solana-sdk = "1.18.3"
solana-account-decoder = "1.18.3"
solana-transaction-status = "1.18.3"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
solana-program = "1.18.3"

# === Async & Runtime ===
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
async-trait = "0.1.74"

# === Data & Config ===
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bytemuck = { version = "1.15.0", features = ["derive"] }
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.11.2"
dotenv = "0.15.0"
config = { version = "0.13", features = ["toml"] }
csv = "1.1"

# === Networking ===
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false }

# === Utilities ===
once_cell = "1.18.0"
chrono = "0.4.38"
rand = "0.8.5"
base64 = "0.22.0"
itertools = "0.12.0"

# === Redis Cache ===
redis = { version = "0.25.0", features = ["aio", "tokio-comp", "connection-manager"] }

dashmap = "5.4.0"
tungstenite = "0.20.1"
futures-util = "0.3.30"
thiserror = "1.0.57"
fern = "0.6"
fastrand = "2.3.0"
